refactor: tidy up .env.sample file

--- a/.env.sample
+++ b/.env.sample
@@ -1,34 +1,53 @@
-# you must rename the .env.sample to .env
+# Port where the rest api is going to listen for https requests
 PORT=
+
+# Port where the rest api is going to listen for http requests
 HTTP_PORT=
 
+# Path to the certificate that is going to be used to encrypt the requests and responses
 SSL_CERT=
+
+# Path to the certificate private key
 SSL_KEY=
 
+# Secret string to generate the json web tokens (jwt)
 JWTSECRET=
+
+# Eg: "2 days", "10h", "7d". Be sure you provide the time units (days, hours, etc), otherwise milliseconds unit is used by default ("120" is equal to "120ms").
 JWT_EXPIRATION_TIME=
 
+# SMTP config used to send the emails
 SMTP_URL=
 SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_PORT=
+# true or false
 SMTP_SECURE=
+# true or false
 SMTP_SELF_SIGNED=
 
-TEST_TIMEOUT=
-LOAD_TEST_DATA=
-GENERATE_ONLY_ADMIN_DATA=
+# It can be true or false. If true, you don't need to complete the SMTP configuration
+MOCK_MAIL_API=
 
-NODE_TLS_REJECT_UNAUTHORIZED=
-
+# Web frontend url
 FRONT_END_URL=
+
+# Url to access to this rest api
 BACKEND_URL=
+
+# authentication-api url
 MICROUTM_AUTH_URL=
 
+# admin email
 ADMIN_EMAIL=
 
+# Name of the connection you want to use from the ormconfig.json
 INSTANCE=
+
+# Path to the user controller extension
 USER_CONTROLLER_EXTENSION=
+
+# Path to the vehicle controller extension
 VEHICLE_CONTROLLER_EXTENSION=
 
 # Modules
@@ -36,25 +55,39 @@ MODULES_TRACKERS=
 MODULES_CENTRAL=
 MODULES_SURVEILLANCE=
 
+# Google API Key
 GOOGLE_API=
+
+# MQTT Server configuration
 MQTT_ENABLED=
 MQTT_ENDPOINT=
 MQTT_USER=
 MQTT_PASS=
 
+# true if you want to mock the auth server
 MOCK_AUTH_SERVER_API=
 
+# Path to json file where is defined the user extra fields schema
 USER_EXTRA_FIELDS_SCHEMA=
+
+# Path to json file where is defined the user document extra fields schema
 USER_DOCUMENT_EXTRA_FIELDS_SCHEMA=
+
+# Path to json file where is defined the vehicle extra fields schema
 VEHICLE_EXTRA_FIELDS_SCHEMA=
+
+# Path to json file where is defined the vehicle document extra fields schema
 VEHICLE_DOCUMENT_EXTRA_FIELDS_SCHEMA=
 
-FLY_SAFE_SERVICE_EMAIL=
+# The name of the company that is deploying the instance
 COMPANY_NAME=
+
+# The support email in case any user has a problem with the software
 SUPPORT_EMAIL=
 
-MOCK_MAIL_API=
-
+# false to disable the cronjob that checks if there is some operation that has to change the sate.
+# In production it must be true
 CRONJOB_ENABLED=
 
+# Path to the folder where the app is going to save the documents uploaded
 UPLOAD_FOLDER=
