--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.15.4",
     "express-validator": "^6.12.1",
     "https": "^1.0.0",
+    "joi": "^17.8.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mjml": "^4.10.2",
