feat: finish the implementation of auth-server-api-mock.ts

--- a/.env.sample
+++ b/.env.sample
@@ -91,3 +91,9 @@ CRONJOB_ENABLED=
 
 # Path to the folder where the app is going to save the documents uploaded
 UPLOAD_FOLDER=
+
+# Path to the public.key (used to verify the bearer token received in the header, was signed by the authentication-api)
+PUBLIC_KEY=
+
+# Path to the private.key (This is only used in case MOCK_AUTH_SERVER_API === true. In that case, we need a private key to sign the tokens)
+PRIVATE_KEY=
