--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/turf": "^3.5.32",
     "@types/underscore": "^1.11.4",
+    "@types/uuid": "^9.0.1",
     "@types/uuid-validate": "^0.0.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
@@ -62,6 +63,7 @@
     "turf": "^3.0.14",
     "typeorm": "^0.2.31",
     "underscore": "^1.13.1",
+    "uuid": "^9.0.0",
     "uuid-validate": "0.0.3",
     "winston": "^3.3.3"
   },
