--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/lodash": "^4.14.191",
     "@types/mjml": "^4.7.0",
     "@types/multer": "^1.4.7",
-    "@types/node": "^8.10.66",
     "@types/node-cron": "^2.0.2",
     "@types/nodemailer": "^6.4.7",
     "@types/socket.io": "^2.1.4",
@@ -24,15 +23,19 @@
     "@types/uuid-validate": "^0.0.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "@vitest/coverage-c8": "^0.29.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "nodemon": "^2.0.2",
     "prettier": "2.8.4",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite": "^4.2.0",
+    "vitest": "^0.29.3"
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.27",
+    "@types/node": "^18.15.3",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
@@ -86,6 +89,7 @@
     "db:diagram": "ts-node ./node_modules/.bin/typeorm-uml ormconfig.json.old",
     "format-write": "prettier --write .",
     "format-check": "prettier --check .",
-    "lint": "eslint . --max-warnings 0 --report-unused-disable-directives"
+    "lint": "eslint . --max-warnings 0 --report-unused-disable-directives",
+    "vitest": "vitest --coverage"
   }
 }
