feat: update typeorm version

--- a/package.json
+++ b/package.json
@@ -61,10 +61,10 @@
     "socket.io-client": "^4.6.1",
     "swagger-typescript-codegen": "^3.0.1",
     "swagger-ui-express": "^4.1.6",
-    "ts-node": "3.3.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "turf": "^3.0.14",
-    "typeorm": "^0.2.31",
+    "typeorm": "^0.3.12",
     "underscore": "^1.13.1",
     "uuid": "^9.0.0",
     "uuid-validate": "0.0.3",
