--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.6",
     "@types/geojson": "^7946.0.7",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/lodash": "^4.14.191",
     "@types/mjml": "^4.7.0",
@@ -26,8 +27,10 @@
     "@vitest/coverage-c8": "^0.29.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.2",
     "prettier": "2.8.4",
+    "ts-jest": "^29.0.5",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.9.5",
     "vite": "^4.2.0",
@@ -90,6 +93,17 @@
     "format-write": "prettier --write .",
     "format-check": "prettier --check .",
     "lint": "eslint . --max-warnings 0 --report-unused-disable-directives",
-    "vitest": "vitest --coverage"
+    "vitest": "vitest --coverage",
+    "jest": "jest --no-cache --runInBand --detectOpenHandles"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/tests/",
+      "/dist/"
+    ]
   }
 }
