refactor: remove my db credentials from the code

--- a/.env.sample
+++ b/.env.sample
@@ -98,6 +98,13 @@ PUBLIC_KEY=
 # Path to the private.key (This is only used in case MOCK_AUTH_SERVER_API === true. In that case, we need a private key to sign the tokens)
 PRIVATE_KEY=
 
+# Data base configuration
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+
 # Configuration of the database that is going to be used by the tests
 # This database is going to be truncated every time we run the tests
 # NEVER SET PRODUCTION DATABASE CONFIGURATION IN THIS ENV VARIABLES
