feat: add OPERATION_DEFAULT_STATE variable to .env file, to config the STATE that operations takes after PROPESED

--- a/.env.sample
+++ b/.env.sample
@@ -91,3 +91,8 @@ CRONJOB_ENABLED=
 
 # Path to the folder where the app is going to save the documents uploaded
 UPLOAD_FOLDER=
+
+# State that operations take after PROPOSED (if the operation does not intersect with other operations, rfvs or uvrs)
+# Accepted values: ACCEPTED | PENDING
+# Default value: PENDING
+OPERATION_DEFAULT_STATE=
