fix: send email with confirmation link when a new user is registered

--- a/.env.sample
+++ b/.env.sample
@@ -82,6 +82,9 @@ VEHICLE_DOCUMENT_EXTRA_FIELDS_SCHEMA=
 # The name of the company that is deploying the instance
 COMPANY_NAME=
 
+# The name of the app
+APP_NAME=
+
 # The support email in case any user has a problem with the software
 SUPPORT_EMAIL=
 
