feat: add OPERATION_PAYMENT_THROW_THE_APP in .env file, to indicate if users have to pay or not for the operations the create

--- a/.env.sample
+++ b/.env.sample
@@ -99,3 +99,6 @@ UPLOAD_FOLDER=
 # Accepted values: ACCEPTED | PENDING
 # Default value: PENDING
 OPERATION_DEFAULT_STATE=
+
+# true or false, depending if users have to pay or not for the operations
+OPERATION_PAYMENT_THROW_THE_APP=
