feat: add TRY_TO_ACTIVATE_NEW_OPERATIONS to .env file to make it configurable

--- a/.env.sample
+++ b/.env.sample
@@ -102,3 +102,10 @@ OPERATION_DEFAULT_STATE=
 
 # true or false, depending if users have to pay or not for the operations
 OPERATION_PAYMENT_THROW_THE_APP=
+
+# Set it 'true' if you want the backend checks when a new operation is inserted if it intersects
+# with other entities (operations, uvrs, rfvs), and in case it doesn't, save it ACTIVATED
+# or ACCEPTED (depending if begin datetime is < now).
+# Set it 'false' if you want all operations starts at PROPOSED, and then the cronjob be the one
+# that checks if the operation intersects with other entities or not.
+TRY_TO_ACTIVATE_NEW_OPERATIONS=
