--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/turf": "^3.5.32",
     "@types/underscore": "^1.11.4",
+    "@types/uuid": "^9.0.2",
     "@types/uuid-validate": "^0.0.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
