feat: add subscribers to operation and send email and sms notifications when the operation is created

--- a/.env.sample
+++ b/.env.sample
@@ -109,3 +109,11 @@ OPERATION_PAYMENT_THROW_THE_APP=
 # Set it 'false' if you want all operations starts at PROPOSED, and then the cronjob be the one
 # that checks if the operation intersects with other entities or not.
 TRY_TO_ACTIVATE_NEW_OPERATIONS=
+
+# true if you want to mock the sms sending
+MOCK_SMS_SENDING=
+
+# Twilio config to send sms
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_FROM_NUMBER=
