feat: add whatsapp subscribers

--- a/.env.sample
+++ b/.env.sample
@@ -113,7 +113,11 @@ TRY_TO_ACTIVATE_NEW_OPERATIONS=
 # true if you want to mock the sms sending
 MOCK_SMS_SENDING=
 
-# Twilio config to send sms
+# true if you want to mock the whatsapp sending
+MOCK_WHATSAPP_SENDING=
+
+# Twilio config to send sms and whatsapp messages
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
-TWILIO_FROM_NUMBER=
+TWILIO_FROM_SMS_NUMBER=
+TWILIO_FROM_WHATSAPP_NUMBER=
