feat: STRATEGIC_DECONFLICT_MODE added to .env file. With this config value, we can define if we want the system checks if new operations intersect or not with another entities (ops, uvrs or rfvs).

--- a/.env.sample
+++ b/.env.sample
@@ -121,3 +121,11 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_FROM_SMS_NUMBER=
 TWILIO_FROM_WHATSAPP_NUMBER=
+
+# - ENABLED: The system will check if an operation intersects with another
+# entity. If it is the case, the operation status will be set as PENDING.
+# - DISABLED: The system won't check if operation intersects with another
+# entity.
+# - If the variable is not defined or if it is set with another value,
+# it will asume ENABLED.
+STRATEGIC_DECONFLICT_MODE=
