--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !.gitignore
 !.prettierignore
 !.prettierrc.json
+!code_of_conduct.md
+!LICENSE
 !ormconfig.sample.json
 !package-lock.json
 !package.json
