feat: CC-478 - Adapt the code to use the new "Content Template" Twilio API to send whatsapp messages

--- a/.env.sample
+++ b/.env.sample
@@ -121,6 +121,7 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_FROM_SMS_NUMBER=
 TWILIO_FROM_WHATSAPP_NUMBER=
+TWILIO_CONTENT_TEMPLATE_SID_aviso_vuelo_no_tripulado=
 
 # - ENABLED: The system will check if an operation intersects with another
 # entity. If it is the case, the operation status will be set as PENDING.
