--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^8.10.66",
     "@types/node-cron": "^2.0.2",
     "@types/nodemailer": "^6.4.7",
+    "@types/serve-index": "^1.9.4",
     "@types/socket.io": "^2.1.4",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/turf": "^3.5.32",
@@ -55,6 +56,7 @@
     "nodemailer": "^6.4.6",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.10",
+    "serve-index": "^1.9.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^4.6.1",
     "swagger-typescript-codegen": "^3.0.1",
